--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<maven-install-plugin.version>2.5.1</maven-install-plugin.version>
 		<maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
 		<maven-clean-plugin.version>2.5</maven-clean-plugin.version>
-		<maven-release-plugin.version>2.4.2</maven-release-plugin.version>
+		<maven-release-plugin.version>2.4.1</maven-release-plugin.version>
 		<maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
 		<maven-version-plugin.version>2.1</maven-version-plugin.version>
 		<jackson.version>2.4.2</jackson.version>
@@ -115,6 +115,19 @@
 			</plugin>
 		</plugins>
 	</reporting>
+
+	<distributionManagement>
+		<repository>
+			<id>deployment</id>
+			<name>Internal Releases</name>
+			<url>http://nexus.slub-dresden.de:8081/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>deployment</id>
+			<name>Internal Releases</name>
+			<url>http://nexus.slub-dresden.de:8081/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<dependencies>
 		<dependency>
