--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 		<junit.version>4.12</junit.version>
 		<google.guava.version>18.0</google.guava.version>
 		<hamcrest.version>1.3</hamcrest.version>
+		<slf4j-api.version>1.7.10</slf4j-api.version>
 	</properties>
 
 	<build>
@@ -201,6 +202,11 @@
 			<groupId>com.fasterxml.jackson.module</groupId>
 			<artifactId>jackson-module-jaxb-annotations</artifactId>
 			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
