--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.formulasearchengine.mathmltools</groupId>
+			<artifactId>mathml-core</artifactId>
+			<version>2.0.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
